modif exo domaine, ajout constante lettrée

--- a/TD3/correction_TD3.tex
+++ b/TD3/correction_TD3.tex
@@ -149,6 +149,23 @@ Trouver le domaine de d\'efinition des fonctions suivantes:
 \item Pour $ t \in \mathbb{R}$, $x(t)=\sqrt{\cos t}$ existe si :
     $ -\dfrac{\pi}{2} + 2k\pi < t < \dfrac{\pi}{2} + 2k\pi, \, k\in \mathbb{Z}  $  \hspace{1cm}
     $\boxed{D_x =]-\dfrac{\pi}{2},\dfrac{\pi}{2} [ + 2k \pi, \, k\in \mathbb{Z}}$
+% \item Pour $ z \in \mathbb{R}$, $F(z)=\arcsin \dfrac{2z}{1+z^2}$ existe si :
+%    $x \geq 1 $  \hspace{1cm}
+%    $\boxed{D_F =[1,+\infty[}$
+% \item Pour $ y \in \mathbb{R}$, $G(y)=\ln(1-A y^2)$ existe si :
+%    $ -\frac{1}{\sqrt{A}} < y < \frac{1}{\sqrt{A}} $  \hspace{1cm}
+%    $\boxed{D_G = ]-\frac{1}{\sqrt{A}},\frac{1}{\sqrt{A}}[}$
+% \item Pour $ x \in \mathbb{R}$,  $H(x)=\arctan(x)+B$ existe si :
+%    $x \in \mathbb{R} $  \hspace{1cm}
+%    $\boxed{D_H = \mathbb{R}}$
+% \item Pour $ t \in \mathbb{R}$, $x(t)=\sqrt{C\cos t}$ existe si :
+%    $ \dfrac{\pi}{2} + 2k\pi < t < \dfrac{3\pi}{2} + 2k\pi, \, k\in \mathbb{Z}  $  \hspace{1cm}
+%    $\boxed{D_x =]\dfrac{\pi}{2},\dfrac{3\pi}{2} [ + 2k \pi, \, k\in \mathbb{Z}}$
+    
+% \item $G(z)=\arcsin \frac{z}{1+z^2}$ \smallskip 
+% \item $F(y)=\ln(1-A y^2)$, $A>0$ \smallskip 
+% \item $H(x)=\arctan(x) + B$, $B \in \mathbb{R}$ \smallskip 
+% \item $x(t)=\sqrt{C\cos t}$, $C\leq0$ 
 \end{alphate}
 \end{reponse}
 
