--- a/TD3/main.tex
+++ b/TD3/main.tex
@@ -117,10 +117,17 @@ Trouver le domaine de d\'efinition des fonctions suivantes:
 \item $y(x)=\arctan \big(\frac{1}{x}\big)$ \smallskip 
 \item $z(u)=\ln(\tan u)$ \smallskip 
 \item $p(x)=\sqrt{1-x^2}$
-\item $F(y)=\ln(1-y^2)$ \smallskip 
 \item $G(z)=\arcsin \frac{2z}{1+z^2}$ \smallskip 
+\item $F(y)=\ln(1-y^2)$ \smallskip 
 \item $H(x)=\arctan(x)+5$ \smallskip 
 \item $x(t)=\sqrt{\cos t}$ 
+
+
+% \item $F(z)=\arcsin \frac{z}{1+z^2}$ \smallskip 
+% \item $G(y)=\ln(1-Ay^2)$, $A>0$ \smallskip 
+% \item $H(x)=\arctan(x) + B$, $B \in \mathbb{R}$ \smallskip 
+% \item $x(t)=\sqrt{C\cos t}$, $C\leq0$ 
+
 \end{alphate}
 \end{multicols}
 \end{exercice}
