save avant chgmt

--- a/cours/TMB-livret_2020.tex
+++ b/cours/TMB-livret_2020.tex
@@ -2,15 +2,11 @@
 %
 %  TMB-diapo.tex  2020-2021  A. Mikelic & L. Dupaigne
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% compiler avec pdflatex pour produire les slides avec pauses
-% compiler [handout] pour produire un fichier sans pauses, à imprimer
-%
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\documentclass[10pt]{beamer}
-\documentclass[8pt,handout]{beamer} % to get handout of the presentation
+\documentclass[10pt]{beamer}
+% \documentclass[8pt]{beamer} % to get handout of the presentation
 
 %\usetheme[height=1cm,width=1.7cm]{}%{sidebar}	
 
@@ -75,7 +71,7 @@
 % Titre, programme
 
 %\addfootboxtemplate{\color{white}}{\color{black}\hfill\large{\insertframenumber}\hspace{1em}\null} %/\inserttotalframenumber}\hspace{1em}\null}
-\include{TMB-diapo1} 
+% \include{TMB-diapo1} 
 % Ch.1 - Nombres complexe
 
 \include{TMB-diapo2}
