--- a/cours/TMB-macros.sty
+++ b/cours/TMB-macros.sty
@@ -33,7 +33,7 @@
 \newcommand{\Vect}{\mathrm{Vect}} 
 \newcommand{\Lin}{\mathrm{Lin}}  
 \newcommand{\Rot}{\mathrm{Rot}} 
-\newcommand{\Ref}{\mathrm{Ref}} 
+% \newcommand{\Ref}{\mathrm{Ref}} 
 \newcommand{\calF}{{\cal F}}
 \newcommand{\calL}{{\cal L}}
 \newcommand{\calM}{{\cal M}}
