--- a/cours/figures_tikz_diapo2.tex
+++ b/cours/figures_tikz_diapo2.tex
@@ -10,7 +10,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\documentclass[10pt]{beamer}
-\documentclass[8pt,handout]{beamer} % to get handout of the presentation
+\documentclass[8pt]{article} % to get handout of the presentation
 
 %\usetheme[height=1cm,width=1.7cm]{}%{sidebar}	
 
@@ -39,12 +39,127 @@
 \usepackage{tikz}
 \usepackage{tikz-3dplot}
 
-\usepackage{TMB-dessins}
+%
+%   TMB-macros.sty  2015  
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%################################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%\setlength{\unitlength}{.3cm}
+
+%\renewcommand{\arraystretch}{1.5}
+
+\renewcommand{\contentsname}{Programme du cours}
+
+\newcommand{\bitem}{\item[$\bullet$]}
+\newcommand{\litem}{\hspace{-.5cm}\item[$\bullet$]}
+\setlist[itemize]{leftmargin=*}
+
+\newcommand{\ds}{\displaystyle}
+
+\newcommand{\N}{\mathbb N}
+\newcommand{\Z}{\mathbb Z}
+\newcommand{\Q}{\mathbb Q}
+\newcommand{\R}{\mathbb R}
+\newcommand{\C}{\mathbb C}
+
+\newcommand{\lra}{\longrightarrow}
+
+\newcommand{\Arg}{\mathrm{Arg}}
+\renewcommand{\Re}{\mathrm{Re}}
+\renewcommand{\Im}{\mathrm{Im}}
+
+\newcommand{\dist}{\mathrm{dist}}
+\newcommand{\Vect}{\mathrm{Vect}} 
+\newcommand{\Lin}{\mathrm{Lin}}  
+\newcommand{\Rot}{\mathrm{Rot}} 
+% \newcommand{\Ref}{\mathrm{Ref}} 
+\newcommand{\calF}{{\cal F}}
+\newcommand{\calL}{{\cal L}}
+\newcommand{\calM}{{\cal M}}
+\newcommand{\calS}{{\cal S}}
+\newcommand{\matun}{\mathbbm{1}}
+\newcommand{\Aire}{\mathrm{Aire}}
+\newcommand{\Vol}{\mathrm{Vol}} 
+\newcommand{\id}{\mathrm{id}}
+
+\newcommand{\vi}{\vec{\mbox{\it \i}}\,}
+\newcommand{\vj}{\vec{\mbox{\it \j}}\,} 
+\newcommand{\vk}{\vec{\mbox{\it k}}\,} 
+\newcommand{\ve}{\vec{e}}
+\newcommand{\vv}{\vec{v}}
+\newcommand{\vu}{\vec{u}}
+\newcommand{\vw}{\vec{w}}
+\newcommand{\vx}{\vec{x}}
+\newcommand{\vy}{\vec{y}}
+\newcommand{\vXY}[2]{\left(\!\!\begin{array}{c} #1 \\ #2 \end{array}\!\!\right)}
+\newcommand{\vXYZ}[3]{\left(\!\!\begin{array}{c} #1 \\ #2 \\ #3 \end{array}\!\!\right)}
+
+\newcommand{\vA}{\overrightarrow{A}}
+\newcommand{\vB}{\overrightarrow{B}}
+\newcommand{\vE}{\overrightarrow{E}}
+\newcommand{\vF}{\overrightarrow{F}}
+\newcommand{\vG}{\overrightarrow{{\cal G}}}
+\newcommand{\vV}{\overrightarrow{V}}
+\newcommand{\vU}{\overrightarrow{U}}
+\newcommand{\vdl}{\overrightarrow{d\ell}}
+\newcommand{\vdS}{\overrightarrow{dS}}
+
+\newcommand{\ch}{\mathrm{ch}\,} 
+\newcommand{\sh}{\mathrm{sh}\,} 
+\renewcommand{\th}{\mathrm{th}\,} 
+
+\newcommand{\ddx}{\frac{d}{dx}}
+\newcommand{\dd}[1]{\frac{d #1}{dx}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%\newenvironment{definition}{\medskip \noindent{\bf D\'efinition.}\ }
+%{\medskip}
+\newenvironment{theoreme}{\medskip \noindent{\bf Th\'eor\`eme.}\ }
+{\medskip}
+\newenvironment{theoreme-nom}[1]{\medskip \noindent{\bf Th\'eor\`eme #1.}\ }
+{\medskip}
+\newenvironment{proposition}{\medskip \noindent{\bf Proposition.}\ }
+{\medskip}
+\newenvironment{corollaire}{\medskip \noindent{\bf Corollaire.}\ }
+{\medskip}
+\newenvironment{lemme}{\medskip \noindent{\bf Lemme.}\ }
+{\medskip}
+\newenvironment{remarque}{\medskip \noindent{\bf Remarque.}\ }{\medskip}
+\newenvironment{rappel}{\medskip \noindent{\bf Rappel.}\ }{\medskip}
+\newenvironment{exercice}{\medskip \noindent{\bf Exercice.}\ }{\medskip}
+\newenvironment{exercices}{\medskip \noindent{\bf Exercices.}\ }{\medskip}
+%\newenvironment{exemple}{\medskip \begin{quote}\noindent{\bf Exemple.}\quad}%
+%     {\end{quote}\medskip}
+%\newenvironment{exemples}{\medskip \begin{quote}\noindent{\bf Exemples.}\quad}%
+%     {\end{quote}\medskip}
+\newenvironment{exemple}{\medskip \noindent{\bf Exemple.}\ }{\medskip}
+\newenvironment{exemples}{\medskip \noindent{\bf Exemples.}\ }{\medskip}
+\newenvironment{preuve}{\medskip \noindent{\bf Preuve.}\ }%
+{\medskip}
+\newenvironment{application}{\medskip \noindent{\bf Application.}\ }%
+{\medskip}
+\newenvironment{question}{\medskip \noindent{\bf Question.}\ }{\medskip}
+\newenvironment{conclusion}{\medskip \noindent{\bf Conclusion.}\ }{\medskip}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%###########################%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
+
+
+
+
+
+% \usepackage{TMB-dessins}
 
 %
 % macros
 %
-\usepackage{TMB-macros}
+% \usepackage{TMB-macros}
 %\usepackage[paperheight=11cm, paperwidth=8.5cm]{geometry}
 %
 % macros pour beamer 
@@ -61,17 +176,14 @@
 %  \end{frame}
 %}
 
-\setbeamertemplate{navigation symbols}{} 
 
-\usepackage[footheight=.5em]{beamerthemeboxes}
-\addfootboxtemplate{\color{white}}{\color{black}\hfill\large{\insertframenumber}\hspace{1em}\null} %/\inserttotalframenumber}\hspace{1em}\null}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
-\quad\raisebox{-\height}{
+% \newcommand{\fonctions_circulaires}{
 \begin{tikzpicture}[scale = 1]%, domain=0:6.28 ]
     %% axis %% 
     \draw[->,>=stealth'] (-1.5,0) -> (1.5,0)  
@@ -103,11 +215,11 @@
     \draw[very thick] (1,0) -- (1,1)
         node[rotate = 270, midway, above]{\scriptsize $\tan x$}; 
 \end{tikzpicture}
-}
+% }
 
-\vspace{2cm}
 
-\quad\raisebox{-\height}{
+
+% \newcommand{\fonctions_hyperboliques}{
 \begin{tikzpicture}[scale = 1]%, domain=0:6.28 ]
     %% axis %% 
     \draw[->,>=stealth'] (-1.5,0) -> (1.5,0)  
@@ -127,19 +239,14 @@
         node[midway,below]{\scriptsize $\ch x$}; 
     %% X^2 - Y^2 = 1
     \begin{scope}
-        \draw plot[variable=\x,domain=1:2,samples=50,smooth] 
+        \draw plot[variable=\x,domain=1:2,samples=20,smooth] 
          ({\x},{(\x*\x - 1)^(1/2)}); %% (y, z, x)
-        \draw plot[variable=\x,domain=1:1.5,samples=50,smooth] 
+        \draw plot[variable=\x,domain=1:1.5,samples=20,smooth] 
          ({\x},{-(\x*\x - 1)^(1/2)}); %% (y, z, x)
     \end{scope} 
 \end{tikzpicture}
-}
-\vspace{2cm}
+% }
 
-%%%%%%%%%%%%%%%%%#################%%%%%%%%%%%%%%%%%%###############
-%
-%   TMB-dessins.sty  2015  
-%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %   Chapitre 5 - Fonctions
@@ -802,7 +909,7 @@
 \draw (0,2) node{$-$} (-0.6,2.3) node{$1$} ;
 \draw (3.14,0) node{$|$} (3.14,1) node{$\pi$} ;
 \draw (6.28,0) node{$|$} (6.28,1) node{$2\pi$} ;
-\draw[thick,smooth,‎samples=100] plot[domain=-7.5:7.5] (\x,{2*cos(2*\x r)-2}) ;
+\draw[thick,smooth,samples=100] plot[domain=-7.5:7.5] (\x,{2*cos(2*\x r)-2}) ;
 \draw (8,-0.6) node{$\theta$} (0,5.5) node{$u(\theta)=\cos(2\theta)-1$} ;
 \end{tikzpicture}
 % }
