figure diapo 1 et diapo2 ok en sty

--- a/cours/TMB-diapo1.tex
+++ b/cours/TMB-diapo1.tex
@@ -41,17 +41,7 @@ Polyn\^omes complexes (racines, factorisation).
 {\bf D\'efinition:} 
 Un {\bf nombre complexe} $\mathbf z$ est un point du plan cart\'esien. 
 \begin{center}
-\begin{picture}(100,40)(-50,-10)
-\put(-50,0){\vector(1,0){100}}
-\put(0,-10){\vector(0,1){40}}
-\put(25,10){\circle*{2}}
-\put(20,14){\scriptsize $z$}
-\put(25,0){\circle*{2}}
-\multiput(0,10)(4,0){6}{\line(1,0){2}}
-\put(0,10){\circle*{2}}
-\put(-6,10){}
-\multiput(25,0)(0,4){3}{\line(0,1){2}}
-\end{picture}
+    $\complexeZ$
 \end{center}
 {\small $\C$ est l'{ensemble des nombres complexes} et on écrit 
 $z\in\C$ pour exprimer le fait que $z$ est un nombre complexe. }
@@ -70,25 +60,12 @@ Les {\bf nombres r\'eels} forment l'axe des abscisses. On les note $z=x, \text{ 
 Les {\bf nombres imaginaires} forment l'axe des ordonnées. Ce sont les multiples de $i$. On les note $z=iy, \text{ où $y\in\R$}$
 \item[$\bullet$]
 Tout nombre complexe s'écrit \framebox{${z=x+iy}$}, où $x\in\R$ et $y\in\R$ 
-\vspace*{1mm}
 \end{itemize}
+
 \begin{center}
-\begin{picture}(100,40)(-50,-10)
-%\thicklines
-\put(-50,0){\vector(1,0){100}}
-\put(0,-10){\vector(0,1){40}}
-\put(25,10){\circle*{2}}
-\put(20,14){\scriptsize $z=x+iy$}
-\put(25,0){\circle*{2}}
-\put(25,-6){\scriptsize $x$}
-\multiput(0,10)(4,0){6}{\line(1,0){2}}
-\put(0,10){\circle*{2}}
-\put(-6,10){\scriptsize $iy$}
-\put(0,20){\circle*{2}}
-\put(-6,20){\scriptsize $i$}
-\multiput(25,0)(0,4){3}{\line(0,1){2}}
-\end{picture}
+    $ \complexeZcoordonnees$    
 \end{center}
+
 {\small \it NB: sur ce dessin, $x\simeq1,1$ et $y\simeq0,5$.}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -123,19 +100,7 @@ le {\bf nombre complexe conjugué} de $z$ est défini par \framebox{\ $\overline
 
 $\overline z$ est donc le point symétrique de $z$ par rapport à l'axe des abscisses.
 \vspace*{1mm}
-\begin{center}
-\begin{picture}(100,40)(-50,-10)
-%\thicklines
-\put(-50,0){\vector(1,0){100}}
-\put(0,-10){\vector(0,1){40}}
-\put(25,10){\circle*{2}}
-\put(20,14){\scriptsize $z=x+iy$}
-\put(25,-10){\circle*{2}}
-\put(20,-14){\scriptsize $\overline{z}=x-iy$}
-%\multiput(0,10)(4,0){6}{\line(1,0){2}}
-\multiput(25,-10)(0,7){3}{\line(0,1){2}}
-\end{picture}
-\end{center}
+$$\complexeZconjugue$$
 {\small 
 {\bf Exemple : } Pour $z=2+i$, on a $\overline{z}=2-i$. Que vaut le conjugué de ${\overline z}$ ?}
 \end{frame}
