--- a/cours/TMB-livret_2020.tex
+++ b/cours/TMB-livret_2020.tex
@@ -5,8 +5,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[10pt]{beamer}
-% \documentclass[8pt]{beamer} % to get handout of the presentation
+% \documentclass[10pt]{beamer}
+\documentclass[8pt]{beamer} % to get handout of the presentation
 
 %\usetheme[height=1cm,width=1.7cm]{}%{sidebar}	
 
@@ -35,7 +35,9 @@
 \usepackage{tikz}
 \usepackage{tikz-3dplot}
 
-\usepackage{TMB-dessins}
+%\usepackage{TMB-dessins}
+\usepackage{figures_tikz_diapo1}
+\usepackage{figures_tikz_diapo2}
 
 %
 % macros
@@ -71,7 +73,7 @@
 % Titre, programme
 
 %\addfootboxtemplate{\color{white}}{\color{black}\hfill\large{\insertframenumber}\hspace{1em}\null} %/\inserttotalframenumber}\hspace{1em}\null}
-% \include{TMB-diapo1} 
+\include{TMB-diapo1} 
 % Ch.1 - Nombres complexe
 
 \include{TMB-diapo2}
