--- a/cours/figures_tikz_diapo1.sty
+++ b/cours/figures_tikz_diapo1.sty
@@ -1,46 +1,10 @@
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%  TMB-diapo.tex  2020-2021  A. Mikelic & L. Dupaigne
+%   Chapitre 1 - Complexes
 %
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\documentclass[10pt]{beamer}
-% \documentclass[8pt]{beamer} % to get handout of the presentation
-
-\usepackage{amsfonts,amsmath,amssymb,amscd,amstext,mathabx,bbm}
-\usepackage{textcomp,multicol,multirow,enumitem}
-\usepackage{pict2e,graphicx}
-\usepackage{mathrsfs}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\usepackage[utf8]{inputenc}
-\usepackage[francais]{babel}  % bof 
-
-\usepackage{tikz}
-\usepackage{tikz-3dplot}
-
-% %\usepackage{TMB-dessins}
-% \usepackage{figures_tikz_diapo1}
-% \usepackage{figures_tikz_diapo2}
-
-%
-% macros
-%
-\usepackage{TMB-macros}
-\newcommand{\uv}{\mbox{\small $u$,$v$}}
-\newcommand{\xy}{\mbox{\small $x$,$y$}}
-\newcommand{\xxyy}{\mbox{\footnotesize $\sqrt{x^2\!+\!y^2}$}}
-
-\setbeamertemplate{navigation symbols}{} 
-
-\usepackage[footheight=.5em]{beamerthemeboxes}
-\addfootboxtemplate{\color{white}}{\color{black}\hfill\large{\insertframenumber}\hspace{1em}\null} %/\inserttotalframenumber}\hspace{1em}\null}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{document}
 
 \newcommand{\complexeZ}{
 \begin{tikzpicture}[scale=0.8, font = \scriptsize]
@@ -194,5 +158,3 @@
         node[above right]{ $w_3$};
 \end{tikzpicture}
 }%***
-
-\end{document}
